testing/overloading/test1.uni
main(){
	a = 1011b;
	b = 11111b; 
	a = 1111b; // should be invalid because its overloading 
	out: a<4>; 
}
neigh
//error 
